test/functions/resolution/errors/testBadCallCandidates.12-all.good
testBadCallCandidates.chpl:14: In method 'test':
testBadCallCandidates.chpl:20: error: unresolved call 'C.bar(42)'
testBadCallCandidates.chpl:8: note: this candidate did not match: C.bar(x: string)
testBadCallCandidates.chpl:20: note: because actual argument #1 with type 'int(64)'
testBadCallCandidates.chpl:8: note: is passed to formal 'x: string'
testBadCallCandidates.chpl:20: note: other candidates are:
testBadCallCandidates.chpl:11: note:   C.bar(x: D)
testBadCallCandidates.chpl:36: note:   D.bar(x: int)
testBadCallCandidates.chpl:65: note:   bar(x: D)
